Fix result number contrast

--- a/src/shared/components/search/brief-result.scss
+++ b/src/shared/components/search/brief-result.scss
@@ -30,4 +30,8 @@ prm-brief-result-container {
     content: "\A";
     white-space: pre;
   }
+
+  .list-item-count {
+    color: #000;
+  }
 }
